--- a/libro/templates/navigatebar.html
+++ b/libro/templates/navigatebar.html
@@ -1,55 +1,17 @@
 {% load static %}
 
-<header>
-    <nav class="menu-container">
-        <!-- burger menu 
-        <input type="checkbox" aria-label="Toggle menu" />
-        <span></span>
-        <span></span>
-        <span></span>-->
+<link rel="stylesheet" href='{% static "css/navigate.css" %}' type="text/css">
+ 
 
+<div class="container">
+    <h1 class="logo"></h1>
 
-
-        <!-- menu items -->
-        <div class="menu">
-            <!-- logo -->
-            <a href="#" class="menu-logo">
-                <img src='{% static "img/navigate/logo.png" %}' alt="magicamente" />
-            </a>
-            <ul>
-                <li>
-                    <a href="#home" class="amenu">
-              Inicio
-            </a>
-                </li>
-                <li>
-                    <a href="#pricing" class="amenu">
-              Blog
-            </a>
-                </li>
-                <li>
-                    <a href="#blog" class="amenu">
-              Contacto
-            </a>
-                </li>
-                <li>
-                    <a href="#docs" class="amenu">
-              Acerca de nosotros
-            </a>
-                </li>
-
-                <li>
-                    <a href="#tucuenta" class="amenu">
-              Tu cuenta
-            </a>
-                </li>
-                <li>
-                    <a href="#tucuenta" class="amenu">
-            Salir
-          </a>
-                </li>
-
-            </ul>
-        </div>
+    <nav>
+      <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
     </nav>
-</header>
+  </div>
