--- a/magicamente/static/css/stylepage.css
+++ b/magicamente/static/css/stylepage.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Uchen&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Uchen&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Fira+Sans:wght@200&family=Open+Sans:wght@300&family=PT+Sans&family=Source+Sans+Pro:wght@300&family=Square+Peg&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 /*
 CSS rules to specify families
 
@@ -34,6 +34,7 @@ section .recuadro {
 }
 
 body {
+    font-family: 'Quicksand', sans-serif;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -80,11 +81,7 @@ p {
     margin-top: 5px;
 }
 
-.menu-container {
-    height: 80px;
-    margin-bottom: 5px;
-    font-size: large;
-}
+
 
 .cursiva-media {
     text-align: center;
@@ -124,7 +121,7 @@ p {
     display: flex;
     margin-right: 3%;
     background: rgb(49, 49, 51);
-    background: linear-gradient(90deg, rgba(142, 142, 148, 0.841) 0%, rgba(255, 255, 231, 1) 5%);
+    background: linear-gradient(90deg, rgba(142, 142, 148, 0.841) 0%, rgb(255, 255, 255) 5%);
 }
 
 .content1 {
@@ -132,7 +129,7 @@ p {
     margin-right: 0px;
     margin-left: 3%;
     background: rgb(255, 255, 231);
-    background: linear-gradient(90deg, rgba(255, 255, 231, 1) 95%, rgba(142, 142, 148, 0.841) 100%);
+    background: linear-gradient(90deg, rgba(255, 255, 255, 1) 95%, rgba(142, 142, 148, 0.841) 100%);
 }
 
 a {
@@ -243,13 +240,13 @@ footer {
     .content2 {
         display: flex;
         margin-right: 3%;
-        background: rgb(255, 255, 231);
+        background: white;
     }
     .content1 {
         display: flex;
         margin-right: 0px;
         margin-left: 3%;
-        background: rgb(255, 255, 231);
+        background: white;
     }
     a {
         text-decoration: none;
