--- a/libro/templates/navigatebar.html
+++ b/libro/templates/navigatebar.html
@@ -1,9 +1,9 @@
 {% load static %}
 
-<link rel="stylesheet" href='{% static "css/navigate.css" %}' type="text/css">
+
  
 
-<div class="container">
+<div class="container-nav">
     <h1 class="logo"></h1>
 
     <nav>
