--- a/magicamente/static/css/stylepage.css
+++ b/magicamente/static/css/stylepage.css
@@ -18,6 +18,12 @@ font-family: 'Square Peg', cursive;
   margin: 0%;
   padding: 0%;
   font-family: "PT Sans", sans-serif;
+  box-sizing: border-box;
+}
+
+
+canvas {
+  background-color: #a546b8;
 }
 
 .container-nav ul {
@@ -38,13 +44,13 @@ section .recuadro {
   font-size: large;
 }
 
-body {
+/*body {
   font-family: "Quicksand", sans-serif;
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: flex-start;
-}
+}*/
 
 .portrait {
   margin: 0px;
@@ -98,15 +104,15 @@ p {
   flex-direction: row;
   justify-content: center;
   height: 850px;
-
+  width: 100%;
   font-family: "PT Sans", sans-serif;
   font-weight: 550;
 }
 
+
 .content1,
 .content2 {
   width: 50%;
-
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -291,186 +297,22 @@ footer {
   }
 }
 
-/*navigate bar*/
 
-.menu {
-  position: absolute;
+
+
+.backimage {
+  margin-top: 10%;
+  margin-left: 10%;
+  margin-right: 0%;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 10px;
-  background: #56595a;
-  color: #d59318;
-  padding: 20px;
-
-  -webkit-user-select: none;
-  user-select: none;
-  box-sizing: border-box;
-  font-size: 20%;
-}
-
-.menu-logo {
-  line-height: 80px;
-  margin: 0 10px;
-  display: flex;
-  justify-content: center;
-}
-
-.menu-logo img {
-  max-height: 80px;
-  max-width: 100px;
-  flex-shrink: 0;
-}
-
-.menu-container a {
-  text-decoration: none;
-  color: #56595a;
-  transition: color 0.3s ease;
-  padding: 0px;
-  font-size: large;
-}
-
-.menu-container a:hover {
-  color: #a546b8;
-}
-
-.menu-container input {
-  display: block;
-  width: 35px;
-  height: 20px;
-  margin: 0;
-  position: absolute;
-  cursor: pointer;
-  opacity: 0;
-  /* hide this */
-
-  /* and place it over the hamburger */
-  -webkit-touch-callout: none;
-}
-
-.amenu {
-  text-align: center;
-  width: 200px;
-  padding: 5px;
-  display: flex;
-  justify-content: center;
-}
-
-/* Burger menu */
-
-.menu-container span {
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
   position: relative;
-  background: #d59318;
-  border-radius: 3px;
-
-  transform-origin: 4px 0px;
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-}
-
-.menu-container span:first-child {
-  transform-origin: 0% 0%;
-}
-
-.menu-container span:nth-child(3) {
-  transform-origin: 0% 100%;
-}
-
-.menu-container input:checked ~ span {
-  opacity: 1;
-  transform: rotate(45deg) translate(3px, -1px);
-  background: #56595a;
-}
-
-.menu-container input:checked ~ span:nth-child(4) {
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-.menu-container input:checked ~ span:nth-child(3) {
-  transform: rotate(-45deg) translate(-5px, 11px);
-}
-
-.menu ul {
-  list-style: none;
-}
-
-.menu li {
-  padding: 10px 0;
-  font-family: "PT Sans", sans-serif;
-}
-
-.menu a {
-  font-size: large;
-}
-
-/* mobile styles */
-
-@media only screen and (max-width: 767px) {
-  .menu-container {
-    flex-direction: column;
-    align-items: flex-end;
-  }
-  .menu-logo {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  .menu-logo img {
-    max-height: 30px;
-  }
-  .menu {
-    position: absolute;
-    box-sizing: border-box;
-    width: 300px;
-    right: -300px;
-    top: 0;
-    margin: -20px;
-    padding: 75px 50px 50px;
-    background: #d59318;
-    -webkit-font-smoothing: antialiased;
-    /* to stop flickering of text in safari */
-    transform-origin: 0% 0%;
-    transform: translateX(0%);
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-  }
-  .menu-container input:checked ~ .menu {
-    transform: translateX(-100%);
-  }
-}
-
-/* desktop styles */
-
-@media only screen and (min-width: 768px) {
-  .menu-container {
-    width: 100%;
-  }
-  .menu-container a {
-    color: #d59318;
-  }
-  .menu-container input {
-    display: none;
-  }
-  /* Burger menu */
-  .menu-container span {
-    display: none;
-  }
-  .menu {
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-  .menu ul {
-    display: flex;
-    padding: 0;
-  }
-  .menu li {
-    padding: 0 20px;
-  }
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url('{% static "img/agua/back01.png" %}');
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 90%;
+  height: 90%;
+  font-weight: 300;
 }
