--- a/libro/templates/navigatebar.html
+++ b/libro/templates/navigatebar.html
@@ -1,17 +1,55 @@
 {% load static %}
-
-
- 
-
-<div class="container-nav">
-    <h1 class="logo"></h1>
-
-    <nav>
-      <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#">Pricing</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
+<link  rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"/>
+<header>
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark w-100 p-3">
+    <div class="container w-auto">
+      <!--<img
+        src='{% static "img/navigate/logo.png" %}'
+        alt="magicamente"
+        height="30px"
+      />-->
+      <a class="navbar-brand" href="#">Magicamente</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a href="/home/" class="nav-link"> Inicio </a>
+          </li>
+          <li class="nav-item">
+            <a href="#pricing" class="nav-link"> Blog </a>
+          </li>
+          <li class="nav-item">
+            <a href="#blog" class="nav-link"> Contacto </a>
+          </li>
+          <li class="nav-item">
+            <a href="#docs" class="nav-link"> Acerca de nosotros </a>
+          </li>
+  
+          {% if user.is_authenticated %}
+          
+          <li class="nav-item">
+            <a href="/logout/" class="nav-link"> Logout </a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a href="/login/" class="nav-link"> Login </a>
+          </li>
+          <li class="nav-item">
+            <a href="/signup/" class="nav-link"> Registrarse </a>
+          </li>
+          {% endif %}
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+</header>
