--- a/libro/templates/navigatebar.html
+++ b/libro/templates/navigatebar.html
@@ -2,7 +2,7 @@
 <link  rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"/>
 <header>
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark w-100 p-3">
-    <div class="container w-auto">
+    <div class="container col-9">
       <!--<img
         src='{% static "img/navigate/logo.png" %}'
         alt="magicamente"
