--- a/magicamente/static/css/stylepage.css
+++ b/magicamente/static/css/stylepage.css
@@ -21,10 +21,7 @@ font-family: 'Square Peg', cursive;
   box-sizing: border-box;
   user-select: none;
 }
-ol .a{
-  text-decoration: none;
-  list-style: none;
-}
+
 
 
 label{
@@ -155,13 +152,7 @@ p {
   );
 }
 
-a {
-  text-decoration: none;
-  color: #56595a;
-  transition: color 0.3s ease;
-  padding: 0px;
-  font-size: small;
-}
+
 
 .imgcentral {
   position: absolute;
@@ -172,12 +163,24 @@ a {
 }
 
 ol {
+  width: 55%;
   font-style: italic;
   display: flex;
   flex-direction: column;
   padding: 0%;
   line-height: 1.3;
   height: 90%;
+  justify-content: space-between;
+}
+.indice a {
+  user-select: all;
+  display: flex;
+  justify-content: space-between;
+  text-decoration: none;
+  color: #56595a;
+  transition: color 0.3s ease;
+  padding: 0px;
+  font-size: small;
 }
 
 #rojo {
