--- a/libro/templates/registration/signup.html
+++ b/libro/templates/registration/signup.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-{% block content %}
+{% block content3 %}
    <main class="container">
     <div class="row">
         <div class ="col-md-6 offset-md-4 mt-5">
@@ -12,6 +12,26 @@
                     <label for="username">Nombre de usuario:</label>
                     <input type="text" id="username" name="username" class="form-control" placeholder="escribe tu nombre de usuario">
                 </div>
+
+                <div class="mb-3">
+                    <label for="first_name">Nombre:</label>
+                    <input type="text" id="first_name" name="first_name" class="form-control" placeholder="Escribe tu primer Nombre">
+
+                </div>
+
+                <div class="mb-3">
+                    <label for="last_name">Apellidos:</label>
+                    <input type="text" id="last_name" name="last" class="form-control" placeholder="Escribe tu Apellido">
+
+                </div>
+
+                <div class="mb-3">
+                    <label for="first_name">Email:</label>
+                    <input type="email" id="email" name="email" class="form-control" placeholder="Escribe tu correo electrónico">
+
+                </div>
+
+                
 
                 <div class="mb-3">
                     <label for="password1">Contraseña:</label>
