--- a/libro/templates/footer.html
+++ b/libro/templates/footer.html
@@ -1,6 +1,29 @@
-
+{% load static %}
 <link  rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"/>
+<footer>
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark w-100 p-1">
+    <div class="container col-8">
+      <!--<img
+        src='{% static "img/navigate/logo.png" %}'
+        alt="magicamente"
+        height="30px"
+      />-->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          {% if user.is_authenticated %}
+          
+          <li class="nav-item">
+            <a class="nav-link" href="/agradecimientos/" >Indice</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a></a>
+          </li>                 
 
-<nav class="navbar navbar-light bg-light">
-    <a class="agradecimientos" href="">Indice</a>
+          {% endif %}
+        </ul>
+      </div>
+    </div>
   </nav>
+  
+</footer>
